# myplugin

./: README.md  setup.cfg
myplugin/content/mypanel/: urls.py
myplugin/content/mypanel/templates/mypanel/: index.html
myplugin/enabled/: _31000_myplugin.py
